# icedude

./: .gitignore  LICENSE  Makefile  README.md  iCEDude.cabal
src/: Commands.hs  Constants.hs  Data.hs  GPIO.hs  M25P10.hs  Main.hs  SPI.hs  Utils.hs  VIO.hs
