name:                iCEDude
version:             0.1.2.0
synopsis:            Programming tool for the ICE40 board
description:         Programming tool for the ICE40 board
license:             MIT
license-file:        LICENSE
author:              Felix Klein <klein@react.uni-saarland.de>
maintainer:          Felix Klein <klein@react.uni-saarland.de>
stability:           alpha
category:            Embedded
build-type:          Simple
cabal-version:       >=1.10

executable iCEDude
  main-is:           Main.hs
  build-depends:     base >=4.7 && <5.0,
                     usb >=1.3 && <1.4,
                     mtl >=2.2 && <2.3,
                     bytestring >=0.10 && <0.11,
                     directory >=1.2 && <1.4,
                     transformers >=0.4 && <0.6,
                     vector >=0.10 && <0.13
  default-language:  Haskell2010
  hs-source-dirs:    src
