name:                iCEDude
version:             0.1.4.0
synopsis:            Programming tool for the ICE40 board
description:         Programming tool for the ICE40 board
license:             MIT
license-file:        LICENSE
author:              Felix Klein <klein@react.uni-saarland.de>
maintainer:          Felix Klein <klein@react.uni-saarland.de>
stability:           alpha
category:            Embedded
build-type:          Simple
cabal-version:       >=1.10

executable iCEDude
  main-is:           Main.hs
  build-depends:     base >=4.7 && <5.0,
                     usb >=1.3 && <1.4,
                     mtl >=2.2 && <2.4,
                     bytestring >=0.10 && <0.13,
                     directory >=1.2 && <1.4,
                     transformers >=0.4 && <0.7,
                     vector >=0.10 && <0.14
  default-language:  Haskell2010
  other-modules:     Commands
                     Data
                     GPIO
                     M25P10
                     SPI
                     Utils
                     VIO
  hs-source-dirs:    src
